# obstacle_halfspaces

./: 2d_unicycle_obstacle.txt  2d_unicycle_regions.txt  2d_unicycle_regions_2.txt  2d_unicycle_regions_3.txt  3d  3d_unicycle_regions.txt  3dregions.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  create_regions  obstacles.cpp  regions.cpp
